--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #012a4a;
+  /* background-color: #012a4a; */
+    background-color: #012a4a;
   padding: 0.75rem 1.5rem;
   color: white;
   position: fixed;
